deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/devel/simplesamlphp-upgrade-notes-2.0.html
+++ b/devel/simplesamlphp-upgrade-notes-2.0.html
@@ -143,6 +143,17 @@ For example, to use the LDAP module:
   in the module's root directory.
  </li>
  <li>
+  The base URL of the SimpleSAMLphp installation no longer provides an admin menu. Instead this is now at the location
+  <code>
+   &lt;simpleSAMLphp base URL&gt;/admin
+  </code>
+  . The
+  <code>
+   admin
+  </code>
+  module needs to be enabled for this to work.
+ </li>
+ <li>
   SAML AuthnRequests that are signed will have their signature validated unless specifically disabled
   by setting
   <code>
