deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/contrib_modules/cas/cas.html
+++ b/contrib_modules/cas/cas.html
@@ -220,19 +220,20 @@ set
  <code>
   ldap
  </code>
- to a null array (but
+ to a
  <code>
-  ldap
+  null
  </code>
- MUST be set):
+ :
 </p>
 <div class="codehilite">
  <pre><span></span><code><span class="x">'example-cas' =&gt; [</span>
 <span class="x">    'cas:CAS',</span>
 <span class="x">    'cas' =&gt; [</span>
 <span class="x">        ...</span>
-<span class="x">],</span>
-<span class="x">'ldap' =&gt; [],</span>
+<span class="x">    ],</span>
+<span class="x">    'ldap' =&gt; null,</span>
+<span class="x">]</span>
 </code></pre>
 </div></main></body>
 </html>
