--- a/devel/simplesamlphp-artifact-idp.html
+++ b/devel/simplesamlphp-artifact-idp.html
@@ -225,12 +225,12 @@ In general, that should look something like:
  <pre><span></span><code><span class="x">'AssertionConsumerService' =&gt; [</span>
 <span class="x">    [</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST',</span>
-<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',</span>
+<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/saml2-acs.php/default-sp',</span>
 <span class="x">        'index' =&gt; 0,</span>
 <span class="x">    ],</span>
 <span class="x">    [</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact',</span>
-<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',</span>
+<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/saml2-acs.php/default-sp',</span>
 <span class="x">        'index' =&gt; 2,</span>
 <span class="x">    ],</span>
 <span class="x">],</span>
