--- a/devel/simplesamlphp-hok-idp.html
+++ b/devel/simplesamlphp-hok-idp.html
@@ -199,12 +199,12 @@ In general, this should look like the following code:
  <pre><span></span><code><span class="x">'AssertionConsumerService' =&gt; [</span>
 <span class="x">    [</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST',</span>
-<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',</span>
+<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/saml2-acs.php/default-sp',</span>
 <span class="x">        'index' =&gt; 0,</span>
 <span class="x">    ],</span>
 <span class="x">    [</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:profiles:holder-of-key:SSO:browser',</span>
-<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/assertionConsumerService/default-sp',</span>
+<span class="x">        'Location' =&gt; 'https://sp.example.org/simplesaml/module.php/saml/sp/saml2-acs.php/default-sp',</span>
 <span class="x">        'index' =&gt; 4,</span>
 <span class="x">    ],</span>
 <span class="x">],</span>
