deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/devel/simplesamlphp-changelog.html
+++ b/devel/simplesamlphp-changelog.html
@@ -148,5 +148,8 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Certificates and private keys can now be retrieved from a database
  </li>
+ <li>
+  Support for Redis sentinel was added (#1699)
+ </li>
 </ul></main></body>
 </html>
