--- a/devel/simplesamlphp-upgrade-notes-2.0.html
+++ b/devel/simplesamlphp-upgrade-notes-2.0.html
@@ -276,6 +276,11 @@ processing filters or interface with the SimpleSAMLphp development API.
 </p>
 <ul>
  <li>
+  We expect your source-files to exist in the src/ directory within your module. This used to be the
+  lib/ directory, so you have to rename the directory and for composer-modules you have to update
+  your composer.json file (specifically the psr-0 and psr-4 entries if you have them).
+ </li>
+ <li>
   Old JSON-formatted dictionaries have been replaced by gettext / .po-files; see
   <a href="https://github.com/simplesamlphp/simplesamlphp/wiki/Migrating-translations-(pre-migration)">
    migration guide
