deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/1.19/simplesamlphp-changelog.html
+++ b/1.19/simplesamlphp-changelog.html
@@ -95,6 +95,20 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-1197">
+ Version 1.19.7
+</h2>
+<p>
+ Released TBD
+</p>
+<div class="codehilite">
+ <pre><span></span><code><span class="o">*</span><span class="w"> </span><span class="nv">Backported</span><span class="w"> </span><span class="nv">fix</span><span class="w"> </span><span class="nv">to</span><span class="w"> </span><span class="nv">error</span><span class="w"> </span><span class="nv">report</span><span class="w"> </span><span class="nv">page</span><span class="w"> </span><span class="ss">(</span><span class="sc">#1637</span><span class="ss">)</span><span class="w"></span>
+<span class="o">*</span><span class="w"> </span><span class="nv">Many</span><span class="w"> </span><span class="nv">doc</span><span class="w"> </span><span class="nv">fixes</span><span class="w"></span>
+<span class="o">*</span><span class="w"> </span><span class="nv">Bump</span><span class="w"> </span><span class="nv">composer</span><span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="nv">npm</span><span class="w"> </span><span class="nv">dependencies</span><span class="w"></span>
+<span class="o">*</span><span class="w"> </span><span class="nv">Many</span><span class="w"> </span><span class="nv">updated</span><span class="w"> </span><span class="nv">translations</span><span class="w"></span>
+<span class="o">*</span><span class="w"> </span><span class="nv">Handle</span><span class="w"> </span><span class="nv">ETag</span><span class="o">/</span><span class="k">If</span><span class="o">-</span><span class="nv">None</span><span class="o">-</span><span class="nv">Match</span><span class="w"> </span><span class="nv">logic</span><span class="w"> </span><span class="ss">(</span><span class="sc">#1672</span><span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="sc">#1673</span><span class="ss">)</span><span class="w"></span>
+</code></pre>
+</div>
 <h2 id="version-1196">
  Version 1.19.6
 </h2>
