--- a/contrib_modules/negotiate/negotiate.html
+++ b/contrib_modules/negotiate/negotiate.html
@@ -173,21 +173,25 @@ client.
  <pre><span></span><code><span class="x">'weblogin' =&gt; [</span>
 <span class="x">    'negotiate:Negotiate',</span>
 <span class="x">    'keytab' =&gt; '/path/to/keytab-file',</span>
-<span class="x">    'fallback' =&gt; 'ldap',</span>
-<span class="x">    'hostname' =&gt; 'ldap.example.com',</span>
-<span class="x">    'base' =&gt; 'cn=people,dc=example,dc=com',</span>
-<span class="x">    'adminUser' =&gt; 'cn=idp-fallback,cn=services,dc=example,dc=com',</span>
-<span class="x">    'adminPassword' =&gt; 'VerySecretPassphraseHush',</span>
-<span class="x">    'referrals' =&gt; true,</span>
-<span class="x">    'spn' =&gt; null</span>
+<span class="x">    'backend' =&gt; 'ldap',</span>
+<span class="x">    'fallback' =&gt; 'crypto-hash',</span>
+<span class="x">    'spn' =&gt; null,</span>
 <span class="x">],</span>
 <span class="x">'ldap' =&gt; [</span>
 <span class="x">    'ldap:LDAP',</span>
 <span class="x">    'hostname' =&gt; 'ldap.example.com',</span>
 <span class="x">    'enable_tls' =&gt; true,</span>
 <span class="x">    'dnpattern' =&gt; 'uid=%username%,cn=people,dc=example,dc=com',</span>
-<span class="x">    'search.enable' =&gt; false</span>
+<span class="x">    'search.enable' =&gt; false,</span>
 <span class="x">],</span>
+<span class="x">'crypto-hash' =&gt; [</span>
+<span class="x">    'authcrypt:Hash',</span>
+<span class="x">    // hashed version of 'verysecret', made with bin/pwgen.php</span>
+<span class="x">    'professor:{SSHA256}P6FDTEEIY2EnER9a6P2GwHhI5JDrwBgjQ913oVQjBngmCtrNBUMowA==' =&gt; [</span>
+<span class="x">        'uid' =&gt; ['prof_a'],</span>
+<span class="x">        'eduPersonAffiliation' =&gt; ['member', 'employee', 'board'],</span>
+<span class="x">    ],</span>
+<span class="x">]</span>
 </code></pre>
 </div>
 <h3 id="php_krb5">
@@ -203,7 +207,6 @@ by php_krb5.
  NOTE! If running using virtual hosts or behind a reverse proxy, you
 might need to change the 'spn' variable to 0 (match any entry in the
 keytab file) or set it to the specific entry you are trying to match.
-This requires php-krb5 &gt;= 1.1.3:
 </p>
 <div class="codehilite">
  <pre><span></span><code><span class="x">'spn' =&gt; 'HTTP/host',</span>
@@ -264,20 +267,10 @@ php_krb5 to read the HTTP_AUTHORIZATION header:
  LDAP is used to verify the user due to the lack of metadata in
 Kerberos. A domain can contain lots of kiosk users, non-personal
 accounts and the likes. The LDAP lookup will authorize and fetch
-attributes as defined by SimpleSamlPhp metadata.
+attributes as defined by SimpleSAMLphp metadata.
 </p>
 <p>
- 'hostname', 'enable_tls', 'debugLDAP', 'timeout', 'base' and
-'referrals' are self-explanatory. Read the documentation of the LDAP
-auth module for more information. 'attr' is the attribute that will
-be used to look up user objects in the directory after extracting it
-from the Kerberos session. Default is 'uid'.
-</p>
-<p>
- For LDAP directories with restricted access to objects or attributes
-Negotiate implements 'adminUser' and 'adminPassword'. adminUser must
-be a DN to an object with access to search for all relevant user
-objects and to look up attributes needed by the SP.
+ Read the documentation of the LDAP auth module for more information.
 </p>
 <h3 id="subnet-filtering">
  Subnet filtering
@@ -302,7 +295,7 @@ purpose of this module.
 </p>
 <p>
  TBD: Replace or supplement with LDAP lookups in the domain. Machines
-currently in the domain should be the only ones that are promted with
+currently in the domain should be the only ones that are prompted with
 WWW-Authenticate: Negotiate.
 </p>
 <h3 id="enablingdisabling-negotiate-from-a-web-browser">
