deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/contrib_modules/webauthn/tested_tokens.html
+++ b/contrib_modules/webauthn/tested_tokens.html
@@ -141,5 +141,8 @@
   Android 7 (Samsung Galaxy S6, Fingerprint Sensor) - when requesting
   indirect/direct, none is delivered instead
  </li>
+ <li>
+  Windows Hello - when requesting indirect/direct, throws Exception because of unimplemented TPM attestation mode
+ </li>
 </ul></main></body>
 </html>
