deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/contrib_modules/ldap/ldap.html
+++ b/contrib_modules/ldap/ldap.html
@@ -166,6 +166,14 @@ authentication source:
 <span class="x">        'version' =&gt; 3,</span>
 
 <span class="x">        /**</span>
+<span class="x">         * Set to TRUE to enable LDAP debug level. Passed to the LDAP connector class.</span>
+<span class="x">         *</span>
+<span class="x">         * Default: FALSE</span>
+<span class="x">         * Required: No</span>
+<span class="x">         */</span>
+<span class="x">        'ldap.debug' =&gt; false,</span>
+
+<span class="x">        /**</span>
 <span class="x">         * The LDAP-options to pass when setting up a connection</span>
 <span class="x">         * See [Symfony documentation][1]</span>
 <span class="x">         */</span>
