--- a/contrib_modules/webauthn/tested_tokens.html
+++ b/contrib_modules/webauthn/tested_tokens.html
@@ -93,46 +93,18 @@
 <h2 id="attestation-modes-none-indirect">
  Attestation modes (None, Indirect)
 </h2>
-<ul>
- <li>
-  Yubikey 5 NFC
- </li>
- <li>
-  Yubikey 5C
- </li>
- <li>
-  <a href="https://support.yubico.com/support/solutions/articles/15000006900-security-key-by-yubico">
-   Security Key by Yubico
-  </a>
- </li>
- <li>
-  <a href="https://support.yubico.com/support/solutions/articles/15000019469-security-key-nfc">
-   Security Key NFC by Yubico
-  </a>
- </li>
- <li>
-  <a href="https://www.ftsafe.com/Products/FIDO/Bio">
-   Feitian BioPass FIDO2
-  </a>
- </li>
- <li>
-  <a href="https://solokeys.com/collections/all/products/solo">
-   Solo - FIDO2 security key (USB only)
-  </a>
- </li>
- <li>
-  <a href="https://solokeys.com/collections/all/products/solo-tap">
-   Solo Tap - FIDO2 security key (USB + NFC)
-  </a>
- </li>
- <li>
-  TouchID (tested on Macbook Pro 2019, macOS 10.15.3, Google Chrome)
-  AAGUID 'adce000235bcc60a648b0b25f1f05503' not in database yet
- </li>
- <li>
-  FaceID (tested on an iPhone with iOS 14)
- </li>
-</ul>
+<div class="codehilite">
+ <pre><span></span><code>* Yubikey 5 NFC
+* Yubikey 5C
+* [Security Key by Yubico](https://support.yubico.com/support/solutions/articles/15000006900-security-key-by-yubico)
+* [Security Key NFC by Yubico](https://support.yubico.com/support/solutions/articles/15000019469-security-key-nfc)
+* [Feitian BioPass FIDO2](https://www.ftsafe.com/Products/FIDO/Bio)
+* [Solo - FIDO2 security key (USB only)](https://solokeys.com/collections/all/products/solo)
+* [Solo Tap - FIDO2 security key (USB + NFC)](https://solokeys.com/collections/all/products/solo-tap)
+* TouchID (tested on Macbook Pro 2019, macOS 10.15.3, Google Chrome) - AAGUID 'adce000235bcc60a648b0b25f1f05503' not in database yet
+* FaceID (tested on an iPhone with iOS 14)
+</code></pre>
+</div>
 <h2 id="attestation-mode-none">
  Attestation mode None
 </h2>
