deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/devel/core/authproc_targetedid.html
+++ b/devel/core/authproc_targetedid.html
@@ -102,7 +102,7 @@
 <p>
  This filter will use the contents of the attribute set by the
  <code>
-  attributename
+  identifyingAttribute
  </code>
  option as the unique user ID.
 </p>
@@ -112,7 +112,7 @@
 <dl>
  <dt>
   <code>
-   attributename
+   identifyingAttribute
   </code>
  </dt>
  <dd>
@@ -155,7 +155,7 @@
  <pre><span></span><code>  'authproc' =&gt; [
       50 =&gt; [
           'class' =&gt; 'core:TargetedID',
-          'attributename' =&gt; 'eduPersonPrincipalName'
+          'identifyingAttribute' =&gt; 'eduPersonPrincipalName'
       ],
   ],
 </code></pre>
