--- a/devel/simplesamlphp-upgrade-notes-2.0.html
+++ b/devel/simplesamlphp-upgrade-notes-2.0.html
@@ -176,6 +176,15 @@ For example, to use the LDAP module:
    identifyingAttribute
   </code>
   .
+  Similarly, in the  saml:AttributeNameID, saml:PersistentNameID and saml:SQLPersistentNameId authproc-filters, the
+  <code>
+   attribute
+  </code>
+  setting has been renamed to
+  <code>
+   identifyingAttribute
+  </code>
+  for consistency with other NameID filters.
  </li>
  <li>
   The default encryption algorithm is set from
