--- a/devel/saml/nameid.html
+++ b/devel/saml/nameid.html
@@ -167,7 +167,7 @@
 <dl>
  <dt>
   <code>
-   attribute
+   identifyingAttribute
   </code>
  </dt>
  <dd>
@@ -221,7 +221,7 @@ The resulting hash is sent as the persistent NameID.
 <dl>
  <dt>
   <code>
-   attribute
+   identifyingAttribute
   </code>
  </dt>
  <dd>
@@ -278,7 +278,7 @@ See the
 <dl>
  <dt>
   <code>
-   attribute
+   identifyingAttribute
   </code>
  </dt>
  <dd>
@@ -447,11 +447,11 @@ This can be used to set the
       ],
       2 =&gt; [
           'class' =&gt; 'saml:PersistentNameID',
-          'attribute' =&gt; 'eduPersonPrincipalName',
+          'identifyingAttribute' =&gt; 'eduPersonPrincipalName',
       ],
       3 =&gt; [
           'class' =&gt; 'saml:AttributeNameID',
-          'attribute' =&gt; 'mail',
+          'identifyingAttribute' =&gt; 'mail',
           'Format' =&gt; 'urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress',
       ],
   ],
@@ -467,7 +467,7 @@ This can be used to set the
       ],
       2 =&gt; [
           'class' =&gt; 'saml:SQLPersistentNameID',
-          'attribute' =&gt; 'eduPersonPrincipalName',
+          'identifyingAttribute' =&gt; 'eduPersonPrincipalName',
       ],
   ],
 </code></pre>
@@ -480,7 +480,7 @@ This can be used to set the
 <span class="w">      </span><span class="o">//</span><span class="w"> </span><span class="nv">Generate</span><span class="w"> </span><span class="nv">the</span><span class="w"> </span><span class="nv">persistent</span><span class="w"> </span><span class="nv">NameID</span>.<span class="w"></span>
 <span class="w">      </span><span class="mi">2</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span>[<span class="w"></span>
 <span class="w">          </span><span class="s1">'class'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'saml:PersistentNameID'</span>,<span class="w"></span>
-<span class="w">          </span><span class="s1">'attribute'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'eduPersonPrincipalName'</span>,<span class="w"></span>
+<span class="w">          </span><span class="s1">'identifyingAttribute'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'eduPersonPrincipalName'</span>,<span class="w"></span>
 <span class="w">      </span>],<span class="w"></span>
 <span class="w">      </span><span class="o">//</span><span class="w"> </span><span class="nv">Add</span><span class="w"> </span><span class="nv">the</span><span class="w"> </span><span class="nv">persistent</span><span class="w"> </span><span class="nv">to</span><span class="w"> </span><span class="nv">the</span><span class="w"> </span><span class="nv">eduPersonTargetedID</span><span class="w"> </span><span class="nv">attribute</span><span class="w"></span>
 <span class="w">      </span><span class="mi">60</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span>[<span class="w"></span>
