deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/devel/saml/sp.html
+++ b/devel/saml/sp.html
@@ -705,7 +705,7 @@ The following attributes are available:
   </code>
  </dt>
  <dd>
-  The entity ID this SP should use.
+  The entity ID this SP should use. (Must be set or an error will be generated.)
  </dd>
  <dd>
   The entity ID must be a URI, that is unlikely to change for technical or political
