deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/devel/saml/sp.html
+++ b/devel/saml/sp.html
@@ -107,17 +107,17 @@ and with entity attributes. See the documentation for those extensions for more 
 </p>
 <ul>
  <li>
-  <a href="./simplesamlphp-metadata-extensions-ui.html">
+  <a href="../simplesamlphp-metadata-extensions-ui.html">
    MDUI extension
   </a>
  </li>
  <li>
-  <a href="./simplesamlphp-metadata-extensions-rpi.html">
+  <a href="../simplesamlphp-metadata-extensions-rpi.html">
    MDRPI extension
   </a>
  </li>
  <li>
-  <a href="./simplesamlphp-metadata-extensions-attributes.html">
+  <a href="../simplesamlphp-metadata-extensions-attributes.html">
    Attributes extension
   </a>
  </li>
