--- a/stable/saml/sp.html
+++ b/stable/saml/sp.html
@@ -105,12 +105,23 @@
  SimpleSAMLphp supports generating metadata with the MDUI and MDRPI metadata extensions
 and with entity attributes. See the documentation for those extensions for more details:
 </p>
-<div class="codehilite">
- <pre><span></span><code><span class="o">*</span><span class="w"> </span><span class="p">[</span><span class="n">MDUI</span><span class="w"> </span><span class="n">extension</span><span class="p">](.</span><span class="o">/</span><span class="n">simplesamlphp</span><span class="o">-</span><span class="n">metadata</span><span class="o">-</span><span class="n">extensions</span><span class="o">-</span><span class="n">ui</span><span class="p">)</span><span class="w"></span>
-<span class="o">*</span><span class="w"> </span><span class="p">[</span><span class="n">MDRPI</span><span class="w"> </span><span class="n">extension</span><span class="p">](.</span><span class="o">/</span><span class="n">simplesamlphp</span><span class="o">-</span><span class="n">metadata</span><span class="o">-</span><span class="n">extensions</span><span class="o">-</span><span class="n">rpi</span><span class="p">)</span><span class="w"></span>
-<span class="o">*</span><span class="w"> </span><span class="p">[</span><span class="n">Attributes</span><span class="w"> </span><span class="n">extension</span><span class="p">](.</span><span class="o">/</span><span class="n">simplesamlphp</span><span class="o">-</span><span class="n">metadata</span><span class="o">-</span><span class="n">extensions</span><span class="o">-</span><span class="n">attributes</span><span class="p">)</span><span class="w"></span>
-</code></pre>
-</div>
+<ul>
+ <li>
+  <a href="../simplesamlphp-metadata-extensions-ui.html">
+   MDUI extension
+  </a>
+ </li>
+ <li>
+  <a href="../simplesamlphp-metadata-extensions-rpi.html">
+   MDRPI extension
+  </a>
+ </li>
+ <li>
+  <a href="../simplesamlphp-metadata-extensions-attributes.html">
+   Attributes extension
+  </a>
+ </li>
+</ul>
 <h2 id="parameters">
  Parameters
 </h2>
